# onnx-conv2matmul

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/onnx_conv2matmul/: __init__.py  cli.py  rewriter.py  validation.py
tests/: test_package.py
