[project]
name = "onnx-conv2matmul"
version = "0.1.1"
description = "Utilities to rewrite ONNX convolution patterns into matrix multiplication forms."
readme = "README.md"
authors = [
    { name = "Edoardo Federici", email = "edoardo.federici.ai@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "numpy>=1.26.0",
    "onnx>=1.17.0",
    "rich>=13.9.0",
]

[project.scripts]
onnx-conv2matmul = "onnx_conv2matmul.cli:main"

[dependency-groups]
dev = [
    "onnxruntime>=1.20.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP006", "UP035", "UP007", "UP045"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
